Implementing filters for security